상주및재택 프로젝트 찾기 수정